<resources>
    <string name="app_name">Essence Chart SDK</string>
    <string name="blogger_url">Blogger : http://essenceware.blogspot.com</string>
    <string name="button_visit_blogger">Visit blogger</string>
    <string name="button_close">Close</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_chart_type">Chart Type</string>
    <string name="menu_chart_color_template">Chart Style</string>
    <string name="chart_type_class01">Column</string>
    <string name="chart_type_class01_sub01">Clustered Column</string>
    <string name="chart_type_class01_sub02">Stacked Column</string>
    <string name="chart_type_class01_sub03">100% Stacked Column</string>
    <string name="chart_type_class01_sub04">3-D Column</string>
    <string name="chart_type_class01_sub05">Stacked Column in 3-D</string>
    <string name="chart_type_class01_sub06">100% Stacked Column in 3-D</string>
    <string name="chart_type_class02">Line</string>
    <string name="chart_type_class02_sub01">Line</string>
    <string name="chart_type_class02_sub02">Stacked Line</string>
    <string name="chart_type_class02_sub03">Line with Markers</string>
    <string name="chart_type_class02_sub04">3-D Line</string>
    <string name="chart_type_class03">Pie</string>
    <string name="chart_type_class03_sub01">Pie</string>
    <string name="chart_type_class03_sub02">Exploded Pie</string>
    <string name="chart_type_class03_sub03">3-D Pie</string>
    <string name="chart_type_class03_sub04">Exploded pie in 3-D</string>
    <string name="chart_type_class04">Bar</string>
    <string name="chart_type_class04_sub01">Clustered Bar</string>
    <string name="chart_type_class04_sub02">Stacked Bar</string>
    <string name="chart_type_class04_sub03">100% Stacked Bar</string>
    <string name="chart_type_class04_sub04">Clustered Bar in 3-D</string>
    <string name="chart_type_class04_sub05">Stacked Bar in 3-D</string>
    <string name="chart_type_class04_sub06">100% Stacked Bar in 3-D</string>
    <string name="chart_type_class05">Area</string>
    <string name="chart_type_class05_sub01">Area</string>
    <string name="chart_type_class05_sub02">100% Stacked Area</string>
    <string name="chart_type_class05_sub03">3-D Area</string>
    <string name="chart_type_class05_sub04">100% Stacked Area in 3-D</string>
    <string name="chart_type_class06">XY(Scatter)</string>
    <string name="chart_type_class06_sub01">Scatter with only Markers</string>
    <string name="chart_type_class06_sub02">Scatter with Straight Lines and Markers</string>
    <string name="chart_type_class06_sub03">Scatter with Straight Lines</string>
    <string name="chart_type_class07">Stock</string>
    <string name="chart_type_class07_sub01">High-Low-Close</string>
    <string name="chart_type_class07_sub02">Open-High-Low-Close</string>
    <string name="chart_type_class08">Surface</string>
    <string name="chart_type_class08_sub01">Contour</string>
    <string name="chart_type_class08_sub02">3-D Surface</string>
    <string name="chart_type_class09">Doughnut</string>
    <string name="chart_type_class09_sub01">3-D Doughnut</string>
    <string name="chart_type_class09_sub02">Exploded Doughnut in 3-D</string>
    <string name="chart_type_class10">Bubble</string>
    <string name="chart_type_class10_sub01">Bubble</string>
    <string name="chart_type_class11">Radar</string>
    <string name="chart_type_class11_sub01">Radar</string>
    <string name="chart_type_class11_sub02">Radar with Markers</string>
    <string name="chart_type_class12">Combine</string>
    <string name="chart_type_class12_sub01">Combine</string>
    <string name="chart_type_class12_sub02">3-D Combine</string>
    <string name="chart_type_unknown">Unknown</string>
    <string name="chart_size">Size</string>
    <string name="chart_rotate_x">Rotate(X)</string>
    <string name="chart_rotate_y">Rotate(Y)</string>
    <string name="chart_rotate_z">Perspective</string>
    <string name="chart_alpha">Alpha</string>
    <string name="chart_color_template_00">Default</string>
    <string name="chart_color_template_01">Style-01</string>
    <string name="chart_color_template_02">Style-02</string>
    <string name="chart_color_template_03">Style-03</string>
    <string name="chart_color_template_04">Style-04</string>
    <string name="chart_color_template_05">Style-05</string>
    <string name="chart_color_template_06">Style-06</string>
    <string name="chart_color_template_07">Style-07</string>
    <string name="chart_color_template_08">Style-08</string>
    <string name="chart_color_template_09">Style-09</string>
    <string name="chart_color_template_10">Style-10</string>
    <string name="chart_color_template_11">Style-11</string>
    <string name="chart_color_template_12">Style-12</string>
    <string name="chart_color_template_13">Style-13</string>
    <string name="chart_color_template_14">Style-14</string>
    <string name="chart_color_template_15">Style-15</string>
    <string name="chart_color_template_16">Style-16</string>
    <string name="chart_color_template_17">Style-17</string>
    <string name="chart_color_template_18">Style-18</string>
    <string name="chart_color_template_19">Style-19</string>
    <string name="chart_color_template_20">Style-20</string>
    <string name="chart_color_template_21">Style-21</string>
    <string name="chart_color_template_22">Style-22</string>
    <string name="chart_color_template_23">Style-23</string>
    <string name="chart_color_template_24">Style-24</string>
    <string name="chart_color_template_25">Style-25</string>
    <string name="chart_color_template_26">Style-26</string>
    <string name="chart_color_template_27">Style-27</string>
    <string name="chart_color_template_28">Style-28</string>
    <string name="chart_color_template_29">Style-29</string>
    <string name="chart_color_template_30">Style-30</string>
    <string name="chart_color_template_31">Style-31</string>
    <string name="chart_color_template_32">Style-32</string>
    <string name="chart_color_template_33">Style-33</string>
    <string name="chart_color_template_34">Style-34(Old Default)</string>
    <string name="chart_color_template_35">Style-35</string>
    <string name="chart_title">Title</string>
    <string name="chart_legend">Legend</string>
    <string name="chart_type">Type</string>
    <string name="chart_style">Style</string>
    <string name="chart_animation">Animation</string>
    <string name="chart_animation_loop">Loop</string>
    <string name="chart_data_queue">Data Queue</string>
    <string name="chart_backdrop">Chart Backdrop</string>
    <string name="chart_plotbackdrop">Plot Backdrop</string>
    <string name="chart_xaxis">X-Axis</string>
    <string name="chart_yaxis">Y-Axis</string>
    <string name="chart_y2axis">Y2-Axis</string>
    <string name="chart_zaxis">Z-Axis</string>
    <string name="chart_series">Series</string>
    <string name="chart_property">Property</string>
    <string name="chart_title_property">Title Property</string>
    <string name="chart_legend_property">Legend Property</string>
    <string name="chart_backdrop_property">Chart Backdrop Property</string>
    <string name="chart_plotbackdrop_property">Plot Backdrop Property</string>
    <string name="chart_xaxis_title_property">X-Axis Title Property</string>
    <string name="chart_yaxis_title_property">Y-Axis Title Property</string>
    <string name="chart_zaxis_title_property">Z-Axis Title Property</string>
    <string name="chart_series_property">Series Property</string>
    <string name="chart_property_title">Title Imput</string>
    <string name="chart_property_location">Location</string>
    <string name="chart_property_font">Font</string>
    <string name="chart_property_apply">Apply</string>
    <string name="chart_property_ok">Ok</string>
    <string name="chart_property_cancel">Cancel</string>
    <string name="chart_title_fileopen">File Open</string>
    <string name="chart_property_location_topleft">Left Top</string>
    <string name="chart_property_location_top">Top</string>
    <string name="chart_property_location_topright">Right Top</string>
    <string name="chart_property_location_left">Left</string>
    <string name="chart_property_location_right">Right</string>
    <string name="chart_property_location_bottomleft">Left Bottom</string>
    <string name="chart_property_location_bottom">Bottom</string>
    <string name="chart_property_location_bottomright">Right Bottom</string>
    <string name="chart_property_font_type">Type</string>
    <string name="chart_property_font_type_sans">Sans</string>
    <string name="chart_property_font_type_serif">Serif</string>
    <string name="chart_property_font_type_monospace">Monospace</string>
    <string name="chart_property_font_style">Style</string>
    <string name="chart_property_font_style_regular">Regular</string>
    <string name="chart_property_font_style_bold">Bold</string>
    <string name="chart_property_font_style_italic">Italic</string>
    <string name="chart_property_font_style_bolditalic">Bold Italic</string>
    <string name="chart_property_font_size">Size</string>
    <string name="chart_property_font_size_8">Size 8</string>
    <string name="chart_property_font_size_10">Size 10</string>
    <string name="chart_property_font_size_12">Size 12</string>
    <string name="chart_property_font_size_20">Size 20</string>
    <string name="chart_property_font_size_24">Size 24</string>
    <string name="chart_property_font_size_30">Size 30</string>
    <string name="chart_property_font_strikeout">StrikeOut</string>
    <string name="chart_property_font_underline">UnderLine</string>
    <string name="chart_property_font_color">Color</string>
    <string name="chart_backdrop_property_frame">Frmae</string>
    <string name="chart_backdrop_property_frame_style">Style</string>
    <string name="chart_property_backdropframe_style_null">Empty</string>
    <string name="chart_property_backdropframe_style_singleline">Single Line</string>
    <string name="chart_property_backdropframe_style_doubleline">Double Line</string>
    <string name="chart_property_backdropframe_style_thickinner">Thick Inner</string>
    <string name="chart_property_backdropframe_style_thickouter">Thick Outer</string>
    <string name="chart_backdrop_property_picture">Image</string>
    <string name="chart_property_picture_file">File</string>
    <string name="chart_property_picture_clear">Clear</string>
    <string name="chart_property_picture_drawstyle">Position</string>
    <string name="chart_property_picture_drawstyle_actulsize">Center</string>
    <string name="chart_property_picture_drawstyle_fullsize">Fill</string>
    <string name="chart_property_picture_drawstyle_fitsize">Fit</string>
    <string name="chart_property_picture_drawstyle_stretch">Stretch</string>
    <string name="chart_property_picture_drawstyle_tiled">Tile</string>
    <string name="chart_property_series_type">Type</string>
    <string name="chart_property_series_order">Order</string>
    <string name="chart_property_series_columns">Columns</string>
    <string name="chart_property_series_allcolumns">All Columns</string>
    <string name="chart_property_series_column">Column</string>
    <string name="chart_property_series_column_bar">Bar</string>
    <string name="chart_property_series_column_hilobar">Hi Lo Bar</string>
    <string name="chart_property_series_column_up">Up</string>
    <string name="chart_property_series_column_down">Down</string>
    <string name="chart_property_series_column_stack">Stack</string>
    <string name="chart_property_series_column_unstack">Unstack</string>
    <string name="chart_property_series_column_property">Columns Property</string>
    <string name="chart_property_series_options">Options</string>
    <string name="chart_property_series_lines">Lines</string>
    <string name="chart_property_series_guidelines">Guide Lines</string>
</resources>